[package]
name = "syml-codegen"
version = "0.1.0"
authors = ["Alexander Chichenin <achichenin@dataart.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = "0.1.3"
serde_json = "1.0.64"
syml-core = { path = "../core" }
