[package]
name = "syml-core"
version = "0.1.1"
authors = ["Alexandr Chichenin <admin@somebugs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
